--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@ layout: compress
     {% include masthead.html %}
 
     {{ content }}
+    {% last_modified_at %}
 
     <div class="page__footer">
       <footer>
