--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,8 @@ layout: compress
     {% include browser-upgrade.html %}
     {% include masthead.html %}
 
+    Site last updated {{ site.github.build_revision }}
     {{ content }}
-    {% last_modified_at %}
 
     <div class="page__footer">
       <footer>
